--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - .env
     environment:
       - PLACEHOLDER=YES
-    image: ${{ secrets.DOCKERHUB_USERNAME }}/lookatme:latest
+    image: "${DOCKERHUB_USERNAME}/lookatme:latest"
 
   mysql-db:
     env_file:
@@ -20,4 +20,4 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
       - ./create_database.sql:/docker-entrypoint-initdb.d/create_database.sql
-    image: ${{ secrets.DOCKERHUB_USERNAME }}/lookatme:latest
+    image: "${DOCKERHUB_USERNAME}/lookatme:latest"
