--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,14 +40,28 @@ jobs:
           docker-compose -f docker-compose.yml build
           docker-compose -f docker-compose.yml push
 
-      - name: Copy docker-compose.yml to Server
+      - name: Create Tar Archive
+        run: tar -czvf /tmp/QtSvIfHgPN.tar.gz .
+
+      - name: Copy Tar Archive to Server
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: docker-compose.yml
-          target: /root/apps/lookatme/docker-compose.yml
+          source: /tmp/QtSvIfHgPN.tar.gz
+          target: /apps/lookatme/QtSvIfHgPN.tar.gz
+
+      - name: Remote Setup
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            mkdir -p /apps/lookatme
+            tar -xzvf /apps/lookatme/QtSvIfHgPN.tar.gz -C /apps/lookatme/
+            rm /apps/lookatme/QtSvIfHgPN.tar.gz
 
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
@@ -57,6 +71,6 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             # Deploy the Docker Compose project on the remote server
-            docker-compose -f /root/apps/lookatme/docker-compose.yml pull
-            docker-compose -f /root/apps/lookatme/docker-compose.yml down
-            docker-compose -f /root/apps/lookatme/docker-compose.yml up -d
+            docker-compose -f /apps/lookatme/docker-compose.yml pull
+            docker-compose -f /apps/lookatme/docker-compose.yml down
+            docker-compose -f /apps/lookatme/docker-compose.yml up -d
