--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,8 @@ jobs:
           # Log in to Docker Hub and push the images
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
           docker-compose build
-          docker-compose push ${{ secrets.DOCKERHUB_USERNAME }}/lookatme:latest
+          docker-compose push node-app
+          docker-compose push mysql-db
 
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
