--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,24 +16,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Generate .env file
-        run: |
-          # Create a .env file with sensitive information
-          echo "MYSQL_PORT=${{ secrets.MYSQL_PORT }}" >> .env
-          echo "MYSQL_HOST=${{ secrets.MYSQL_HOST }}" >> .env
-          echo "MYSQL_USER=${{ secrets.MYSQL_USER }}" >> .env
-          echo "MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }}" >> .env
-          echo "MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}" >> .env
-          echo "SESSION_SECRET=${{ secrets.SESSION_SECRET }}" >> .env
-          echo "DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}" >> .env
-
-      - name: Build and Push Docker Images
-        run: |
-          # Log in to Docker Hub and push the images
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-          docker-compose build
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/lookatme:latest
-
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
         with:
@@ -42,12 +24,13 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             # Change to the appropriate directory
-            ls
             cd apps/lookatme/
-            ls
 
             # Pull the Docker Compose project on the remote server
-            docker-compose pull
+            docker-compose pull ${{ secrets.DOCKERHUB_USERNAME }}/lookatme:latest
+            docker-compose pull mysql
+            git pull origin main
             docker-compose down
+            docker-compose build
             docker-compose up -d
   
