--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,10 @@ jobs:
           docker-compose build
           docker-compose push
 
+      - name: Copy Docker Compose file to server
+        run: |
+          scp -i ${{ secrets.SERVER_SSH_KEY }} docker-compose.yml ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/apps/lookatme/
+  
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
         with:
