--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,15 +32,6 @@ jobs:
           docker-compose build
           docker-compose push
 
-      - name: Install rsync
-        run: |
-          sudo apt-get update
-          sudo apt-get install rsync -y
-
-      - name: Copy Docker Compose file to server using rsync
-        run: |
-          rsync -av -e "ssh -i ${{ secrets.SERVER_SSH_KEY }}" docker-compose.yml ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}
-  
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
         with:
@@ -48,12 +39,23 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
+            sudo apt-get install subversion
             # Change to the appropriate directory..
             cd apps/lookatme/
 
             # Pull the Docker Compose project on the remote server
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/lookatme:latest
             docker pull mysql
+            
+            echo "MYSQL_PORT=${{ secrets.MYSQL_PORT }}" >> .env
+            echo "MYSQL_HOST=${{ secrets.MYSQL_HOST }}" >> .env
+            echo "MYSQL_USER=${{ secrets.MYSQL_USER }}" >> .env
+            echo "MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }}" >> .env
+            echo "MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}" >> .env
+            echo "SESSION_SECRET=${{ secrets.SESSION_SECRET }}" >> .env
+            echo "DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}" >> .env
+            svn checkout https://github.com/nheek/lookatme/blob/main/Dockerfile
+            svn checkout https://github.com/nheek/lookatme/blob/main/docker-compose.yml
             # git pull origin actions-test
             docker-compose up -d
   
