--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,14 +39,14 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            sudo apt-get install subversion
+            # sudo apt-get install subversion
             # Change to the appropriate directory..
             cd apps/lookatme/
 
             # Pull the Docker Compose project on the remote server
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/lookatme:latest
             docker pull mysql
-            
+
             echo "MYSQL_PORT=${{ secrets.MYSQL_PORT }}" >> .env
             echo "MYSQL_HOST=${{ secrets.MYSQL_HOST }}" >> .env
             echo "MYSQL_USER=${{ secrets.MYSQL_USER }}" >> .env
