--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   node-app:
     build: .
+    restart: always
     ports:
       - "3002:3002"
     depends_on:
@@ -15,6 +16,7 @@ services:
 
   mysql-db:
     image: mysql:latest
+    restart: always
     env_file:
       - .env
     environment:
