--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,12 +39,15 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             # Change to the appropriate directory..
-            cd apps/lookatme/
+            cd apps
+            mkdir lookatme
+            cd lookatme
             
             # Pull the Docker Compose project on the remote server
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/lookatme:latest
             docker pull mysql
 
+            rm -rf .env
             echo "MYSQL_PORT=${{ secrets.MYSQL_PORT }}" >> .env
             echo "MYSQL_HOST=${{ secrets.MYSQL_HOST }}" >> .env
             echo "MYSQL_USER=${{ secrets.MYSQL_USER }}" >> .env
