--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,4 +25,5 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
       - .sql_data:/docker-entrypoint-initdb.d/
-    mem_limit: 50m
+      - ./my.cnf:/etc/mysql/conf.d/my.cnf  # Mount custom my.cnf file
+    mem_limit: 55M
