--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,5 +25,5 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
       - .sql_data:/docker-entrypoint-initdb.d/
-      - my.cnf:/etc/mysql/conf.d/my.cnf  # Mount custom my.cnf file
+      - /my.cnf:/etc/mysql/conf.d/my.cnf  # Mount custom my.cnf file
     mem_limit: 60M
