--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,4 +26,4 @@ services:
     volumes:
       - .sql_data:/docker-entrypoint-initdb.d/
       - .custom_sql_settings:/etc/mysql/conf.d/  # Mount custom my.cnf file
-    mem_limit: 55M
+    # mem_limit: 55M
