--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Build and Push Docker Images
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-          docker-compose build
-          docker-compose push
+          docker compose build
+          docker compose push
 
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
@@ -68,4 +68,4 @@ jobs:
             cd .sql_data
             curl -O -L https://raw.githubusercontent.com/nheek/lookatme/main/.sql_data/create_database.sql
 
-            docker-compose up -d
+            docker compose up -d
