--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "LookAtMe",
-  "version": "0.2.0",
+  "name": "lookatme",
+  "version": "0.2.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,8 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "http": "^0.0.1-security",
