--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   node-app:
@@ -12,7 +12,7 @@ services:
       - .env
     environment:
       - PLACEHOLDER=YES
-    image: "nheek/lookatme:latest" 
+    image: "nheek/lookatme:latest"
 
   mysql-db:
     image: mysql:latest
