--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lookatme",
-  "version": "0.2.1",
+  "version": "0.2.5",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,8 @@
     "build:css": "npx tailwindcss -i ./public/styles/style.css -o ./public/styles/tailwind.css",
     "dev": "nodemon app.js",
     "start": "wait-for-it mysql-db:3306 -- npm run start-app",
-    "start-app": "node app.js"
+    "start-app": "node app.js",
+    "prettier": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -16,20 +17,21 @@
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "ejs": "^3.1.9",
-    "express": "^4.19.2",
-    "express-rate-limit": "^7.2.0",
-    "express-session": "^1.18.0",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "express-session": "^1.18.1",
+    "helmet": "^8.0.0",
     "http": "^0.0.1-security",
-    "mysql2": "^3.9.0",
-    "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4"
+    "mysql2": "^3.11.3",
+    "prettier": "^3.3.3",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
