*temporarily removed github actions, implemented k3s, and changed docker compose to local

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -12,7 +12,7 @@ services:
       - .env
     environment:
       - PLACEHOLDER=YES
-    image: "nheek/lookatme:latest"
+    image: "reg.nheek.com/nheek/lookatme:latest"
 
   postgres:
     image: postgres:latest
