--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build, Push, and Deploy Docker Compose
 on:
   push:
     branches:
-      - main
+      - none
 
 jobs:
   build-push-and-deploy:
