--- a/k3s/ingress.yaml
+++ b/k3s/ingress.yaml
@@ -2,12 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: lookatme-ingress
-  annotations:
-    # Optional: Add Traefik-specific annotations if needed
-    # traefik.ingress.kubernetes.io/router.entrypoints: web
-    # traefik.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: traefik
+  ingressClassName: nginx
   rules:
   - host: lookatme.nheek.com
     http:
@@ -18,4 +14,4 @@ spec:
           service:
             name: lookatme-service
             port:
-              number: 80
+              number: 30085
